--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,20 @@ html {
     color: var(--clr3);
 }
 
-.arrow {
-    color: var(--clr1);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 1em;
+}
+
+.href-clean {
+    list-style-type: none;
+}
+
+.display-block {
     display: block;
 }
 
@@ -80,6 +92,7 @@ html {
 .main-header {
     background-color: var(--clr0);
     box-shadow: inset 0 -5px 0 #000;
+
 }
 
 .main-screen {
@@ -90,6 +103,8 @@ html {
     pointer-events: none;
     opacity: 0;
     transition: opacity .6s;
+    z-index: 1;
+
 }
 
 .screen-modal {
@@ -100,6 +115,7 @@ html {
     pointer-events: none;
     opacity: 0;
     transition: opacity .6s;
+    z-index: 1;
 }
 
 body.menu-open .main-screen {
@@ -120,6 +136,8 @@ body.menu-open .main-screen {
     padding: 1em;
     transition: 0.3 ease-in-out;
     display: none;
+    z-index: 10;
+
 
 }
 
@@ -152,7 +170,8 @@ body.menu-open .main-screen {
 .header-box {
     margin: auto;
     width: 100%;
-   
+    color: var(--clr0);
+
 }
 
 .main-nav a {
@@ -163,20 +182,20 @@ body.menu-open .main-screen {
     display: block;
     font-weight: 700;
     color: var(--clr1);
-    
+
 }
 
 /* no need to touch */
 .main-nav a:hover {
     box-shadow: -1px 0 0 #1d1d1d, inset 0 -6px 0 var(--clr3);
     color: var(--clr3);
-    
 }
+
 .main-nav a.active {
     box-shadow: -1px 0 0 #1d1d1d, inset 0 -6px 0 var(--clr3);
     color: var(--clr3);
-
 }
+
 .main-content {
     flex-wrap: wrap;
     border: 1px solid #e1e0e0;
@@ -198,40 +217,34 @@ body.menu-open .main-screen {
 
 }
 
-/* no need to touch */
 .btn-modal {
-    display: flex;
-    justify-content: center;
-    max-width: 186px;
-    padding: 0.75em;
+    border: 2px solid #c2c2c2;
     color: #c2c1c1;
     font-weight: 700;
-    letter-spacing: 0.48px;
     background-color: var(--clr1);
-    border: 2px solid #c2c2c2;
-    border-radius: 25px;
-    cursor: pointer;
+    align-self: flex-start;
+    padding: 0.75em 1.625em;
+    border-radius: 2.5em;
+    margin-top: 0.9em;
+    transition: padding 0.4s;
+    position: relative;
 }
 
 .btn-modal:hover {
     border: 2px solid var(--clr3);
     color: var(--clr3);
-}
-
-.btn-modal span {
-    color: var(--clr1);
-    width: 10px;
-    font-weight: bold;
-    padding: 0em 0.2em;
-}
-
-.btn-modal span:hover {
-    color: var(--clr3);
+    padding-inline-end: 2.25em;
 
 }
 
-.card img {
-    aspect-ratio: 1/0.65;
+.btn-modal:hover::after {
+    content: "\2192";
+    position: absolute;
+    right: 0.75em;
+}
+
+.card p {
+    padding: 0.6em 0;
 }
 
 .paging {
@@ -302,6 +315,23 @@ body.menu-open .main-screen {
     display: none;
 }
 
+.dropdown {
+    position: relative;
+}
+
+.drop-down {
+    position: absolute;
+    z-index: 1;
+    display: none;
+}
+
+.dropdown:hover .drop-down {
+    display: block;
+}
+
+.drop-down a {
+    border-left: 1.5px solid #1d1d1d;
+}
 
 @media (max-width: 740px) {
     .menu-toggle {
@@ -310,50 +340,51 @@ body.menu-open .main-screen {
         font-weight: bold;
     }
 
+    .main-header {
+        position: fixed;
+        width: 100%;
+        z-index: 1;
+    }
+
     .header-box {
         justify-content: space-between;
-        padding: 2em 2.5em;
+        padding: 1em 2.5em;
     }
 
     .main-nav ul {
-        position: fixed;
-        top: 0;
-        right: 0;
+        position: absolute;
+        transform: translateY(100%);
+        bottom: 0;
+        left: 0;
         flex-direction: column;
-        height: 100vh;
         background: var(--clr0);
-        /* border-inline-start: 1px solid #ccc; */
-        min-width: 200px;
-        transform: translateX(110%);
-        transition: transform .6s, box-shadow .6s;
-    }
-
-    .main-nav a {
-        background-color: var(--clr2);
-        color: var(--clr2);
+        align-items: center;
+        width: 100%;
+        justify-content: flex-end;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.6s, box-shadow 0.6s;
     }
 
     body.menu-open .main-nav ul {
-        transform: translateX(0);
-        box-shadow: -6px 0px 14px rgb(0 0 0 / 20%);
+        max-height: 100vh;
     }
 
     .header-box .main-nav a {
-        display: block;
-        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
         padding: 13px 10px;
-        border-bottom: 1px solid #ccc;
         background-color: var(--clr0);
-        color: var(--clr2);
-
-        transition: background-color .6s;
+        color: var(--clr1);
     }
 
     .main-content .flex {
         display: flex;
         flex-direction: column;
-        text-align: left;
         min-width: 0px;
+        margin-top: 100px;
     }
 
     .paging {
@@ -377,16 +408,30 @@ body.menu-open .main-screen {
         min-width: 100%;
         min-height: 100%;
     }
+
+    .dropdown .drop-down ul {
+        position: absolute;
+
+    }
+
+    .dropdown:hover .drop-down {
+        display: none;
+    }
+
 }
 
 @media (min-width: 740px) {
     .header-box {
         justify-content: space-between;
-        max-width: 740px;
+        max-width: 800px;
     }
 
     .main-nav a {
         padding: 2.1em 1.7em;
+    }
+
+    .drop-down a {
+        width: 6.85em;
     }
 
     .logo {
@@ -394,27 +439,26 @@ body.menu-open .main-screen {
     }
 
     .main-content {
-        max-width: 900px;
+        max-width: 800px;
     }
 
     .card {
         margin-top: var(--before-card);
+        padding: 0 1em 0 0;
 
     }
 
     .card img {
         width: 40%;
+        object-fit: cover;
     }
 
-    .card .card-text {
+    .card-text {
         justify-content: space-between;
         margin-left: var(--middle-left-margin);
-
     }
 
-    .card p {
-        max-width: 100%;
-    }
+
 
     .main-footer {
         padding: 2em 0em;
@@ -435,45 +479,20 @@ body.menu-open .main-screen {
 
     }
 
-    .card {
-        margin-top: var(--before-card);
-        max-width: 980px;
-
-    }
-
-    .card .card-text {
-        min-height: 290px;
-        max-height: 100%;
-        margin-left: var(--middle-left-margin);
-
-
-    }
-
-
-    .card h2 {
-        max-width: 500px;
-    }
-
-    .card p {
-        max-width: 100%;
-    }
-
-    .card img {
-        /* aspect-ratio: 16/9; */
-        /* aspect-ratio: 16 / 9; */
-        width: 40%;
-    }
-
     .main-nav a {
         padding: 3.1em 3.1em 3.1em 3.1em;
 
+    }
+
+    .drop-down a {
+        width: 9.6em;
     }
 
     .main-footer {
         padding: 4.326em 0em;
     }
 
-    .card {
-        height: 110%;
+    .card img {
+        width: 100%;
     }
 }
