aftar fixing file order

--- a/css/main.css
+++ b/css/main.css
@@ -1,498 +1,18 @@
+/* basic */
+@import url(/css/setup/vars.css);
+@import url(/css/setup/helpers.css);
+@import url(/css/setup/font-family.css);
+/* cmps */
+@import url(/css/setup/icon-hover-color.css);
+@import url(/css/setup/btn-modal-open.css);
+@import url(/css/setup/cmps/header.css);
+@import url(/css/setup/cmps/drop-down.css);
+@import url(/css/setup/cmps/modal.css);
+@import url(/css/setup/cmps/main-content.css);
+@import url(/css/setup/cmps/footer.css);
+
 * {
     font-family: Lato, serif;
     box-sizing: border-box;
     margin: 0;
-}
-
-:root {
-    --clr0: #292929;
-    --clr1: #fff;
-    --clr2: #606060;
-    --clr3: #58c93a;
-    --middle-left-margin: 60px;
-    --before-card: 60px;
-}
-
-/* fonts */
-
-@font-face {
-    font-family: lato;
-    src: url(/fonts/Lato/Lato-Regular.ttf);
-}
-
-@font-face {
-    font-family: eurofurencer;
-    src: url(/fonts/eurofurencer/eurof55.ttf);
-}
-
-html {
-    font-family: Lato, serif;
-    line-height: 1.5;
-}
-
-/* helpers */
-.flex {
-    display: flex;
-}
-
-.flexC {
-    display: flex;
-    flex-direction: column;
-}
-
-.list-clean {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-}
-
-.list-clean li a {
-    text-decoration: none;
-}
-
-.text-center {
-    align-items: center;
-}
-
-.pointer {
-    cursor: pointer;
-}
-
-.green {
-    color: var(--clr3);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 1em;
-}
-
-.href-clean {
-    list-style-type: none;
-}
-
-.display-block {
-    display: block;
-}
-
-/* **** */
-
-.logo {
-    font-family: eurofurencer, serif;
-    font-size: 2.4em;
-    color: var(--clr1);
-    font-weight: 400;
-}
-
-.main-header {
-    background-color: var(--clr0);
-    box-shadow: inset 0 -5px 0 #000;
-
-}
-
-.main-screen {
-    position: fixed;
-    inset: 0;
-    background-color: rgb(0 0 0 / 70%);
-    cursor: pointer;
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity .6s;
-    z-index: 1;
-
-}
-
-.screen-modal {
-    position: fixed;
-    inset: 0;
-    background-color: rgb(0 0 0 / 70%);
-    cursor: pointer;
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity .6s;
-    z-index: 1;
-}
-
-body.menu-open .main-screen {
-    pointer-events: auto;
-    opacity: 1;
-}
-
-.modal-data {
-    position: fixed;
-    background-color: var(--clr1);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    justify-content: space-around;
-    min-height: 350px;
-    max-width: 450px;
-    border-radius: 5px;
-    padding: 1em;
-    transition: 0.3 ease-in-out;
-    display: none;
-    z-index: 10;
-
-
-}
-
-.modal-data p {
-    color: var(--clr2);
-    font-weight: 400;
-}
-
-.modal-data h2 {
-    color: #4f4e4e;
-    font-size: 27px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.84px;
-
-}
-
-.modal-btn-close {
-    width: 145px;
-    padding: 1em;
-    align-self: center;
-    font-weight: bold;
-    background-color: #4f4e4e;
-    border: none;
-    color: var(--clr1);
-    text-transform: uppercase;
-
-}
-
-.header-box {
-    margin: auto;
-    width: 100%;
-    color: var(--clr0);
-
-}
-
-.main-nav a {
-    border-right: 1px solid #1d1d1d;
-    box-shadow: inset 0 -5px 0 #000;
-    background-color: var(--clr0);
-    text-shadow: 0 1px 0 #1e1e1e;
-    display: block;
-    font-weight: 700;
-    color: var(--clr1);
-
-}
-
-/* no need to touch */
-.main-nav a:hover {
-    box-shadow: -1px 0 0 #1d1d1d, inset 0 -6px 0 var(--clr3);
-    color: var(--clr3);
-}
-
-.main-nav a.active {
-    box-shadow: -1px 0 0 #1d1d1d, inset 0 -6px 0 var(--clr3);
-    color: var(--clr3);
-}
-
-.main-content {
-    flex-wrap: wrap;
-    border: 1px solid #e1e0e0;
-    margin: auto;
-
-}
-
-.card p {
-    color: var(--clr2);
-    font-weight: 400;
-}
-
-.card h2 {
-    color: #4f4e4e;
-    font-size: 27px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.84px;
-
-}
-
-.btn-modal {
-    border: 2px solid #c2c2c2;
-    color: #c2c1c1;
-    font-weight: 700;
-    background-color: var(--clr1);
-    align-self: flex-start;
-    padding: 0.75em 1.625em;
-    border-radius: 2.5em;
-    margin-top: 0.9em;
-    transition: padding 0.4s;
-    position: relative;
-}
-
-.btn-modal:hover {
-    border: 2px solid var(--clr3);
-    color: var(--clr3);
-    padding-inline-end: 2.25em;
-
-}
-
-.btn-modal:hover::after {
-    content: "\2192";
-    position: absolute;
-    right: 0.75em;
-}
-
-.card p {
-    padding: 0.6em 0;
-}
-
-.paging {
-    justify-content: space-between;
-    font-size: 18px;
-    flex-grow: 1;
-    color: #818181;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.9px;
-    margin-top: var(--before-card);
-    border-top: 1.5px solid #e1e0e0;
-    padding: 1.2em;
-    display: flex;
-    flex-direction: row;
-}
-
-.main-footer {
-    max-width: 100%;
-    background-color: #f8f8f8;
-}
-
-.logo-footer {
-    font-family: eurofurencer, serif;
-    font-size: 2.184em;
-    color: var(--clr0);
-    font-weight: 400;
-}
-
-/* icon not need to touch */
-.icon-footer a {
-    display: block;
-    color: #e5e5e5;
-    /* should put here aspect ratio??? */
-    font-size: 40px;
-    padding: 0px 10px;
-}
-
-.fc:hover {
-    color: #516fad;
-}
-
-.tw:hover {
-    color: #1d98f0;
-    ;
-}
-
-.be:hover {
-    color: #f01df0c1;
-    ;
-}
-
-.dr:hover {
-    color: #f0361dc1;
-    ;
-}
-
-.s-text {
-    color: #a6a6a6;
-    font-size: 13px;
-    font-weight: 400;
-    text-align: center;
-    padding: 2.307em 1.884em;
-}
-
-.menu-toggle {
-    padding: 0.2em 0.2em;
-    display: none;
-}
-
-.dropdown {
-    position: relative;
-}
-
-.drop-down {
-    position: absolute;
-    z-index: 1;
-    display: none;
-}
-
-.dropdown:hover .drop-down {
-    display: block;
-}
-
-.drop-down a {
-    border-left: 1.5px solid #1d1d1d;
-}
-
-@media (max-width: 740px) {
-    .menu-toggle {
-        display: block;
-        padding: 0em 0.5em;
-        font-weight: bold;
-    }
-
-    .main-header {
-        position: fixed;
-        width: 100%;
-        z-index: 1;
-    }
-
-    .header-box {
-        justify-content: space-between;
-        padding: 1em 2.5em;
-    }
-
-    .main-nav ul {
-        position: absolute;
-        transform: translateY(100%);
-        bottom: 0;
-        left: 0;
-        flex-direction: column;
-        background: var(--clr0);
-        align-items: center;
-        width: 100%;
-        justify-content: flex-end;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.6s, box-shadow 0.6s;
-    }
-
-    body.menu-open .main-nav ul {
-        max-height: 100vh;
-    }
-
-    .header-box .main-nav a {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100vw;
-        padding: 13px 10px;
-        background-color: var(--clr0);
-        color: var(--clr1);
-    }
-
-    .main-content .flex {
-        display: flex;
-        flex-direction: column;
-        min-width: 0px;
-        margin-top: 100px;
-    }
-
-    .paging {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .main-footer {
-        padding: 2em 0em;
-    }
-
-    .card {
-        padding: 1em 1em;
-    }
-
-    .btn-modal {
-        margin: auto;
-    }
-
-    .modal-data {
-        min-width: 100%;
-        min-height: 100%;
-    }
-
-    .dropdown .drop-down ul {
-        position: absolute;
-
-    }
-
-    .dropdown:hover .drop-down {
-        display: none;
-    }
-
-}
-
-@media (min-width: 740px) {
-    .header-box {
-        justify-content: space-between;
-        max-width: 800px;
-    }
-
-    .main-nav a {
-        padding: 2.1em 1.7em;
-    }
-
-    .drop-down a {
-        width: 6.85em;
-    }
-
-    .logo {
-        padding-left: 1.5em;
-    }
-
-    .main-content {
-        max-width: 800px;
-    }
-
-    .card {
-        margin-top: var(--before-card);
-        padding: 0 1em 0 0;
-
-    }
-
-    .card img {
-        width: 40%;
-        object-fit: cover;
-    }
-
-    .card-text {
-        justify-content: space-between;
-        margin-left: var(--middle-left-margin);
-    }
-
-
-
-    .main-footer {
-        padding: 2em 0em;
-    }
-
-
-}
-
-@media (min-width: 1100px) {
-    .header-box {
-        justify-content: space-between;
-        max-width: 1000px;
-
-    }
-
-    .main-content {
-        max-width: 1000px;
-
-    }
-
-    .main-nav a {
-        padding: 3.1em 3.1em 3.1em 3.1em;
-
-    }
-
-    .drop-down a {
-        width: 9.6em;
-    }
-
-    .main-footer {
-        padding: 4.326em 0em;
-    }
-
-    .card img {
-        width: 100%;
-    }
 }
